fix: reduce the white spaces

--- a/client/src/components/PostStuff/WritePost/WritePost.module.scss
+++ b/client/src/components/PostStuff/WritePost/WritePost.module.scss
@@ -1,7 +1,7 @@
 .newPost {
-    border-radius: 4px;
+    border-radius: 8px;
     background-color: #fff;
-    padding: 26px;
+    padding: 10px;
     margin-bottom: 16px;
 }
 
